config/nodered/manifests/namespace.yaml
# Node-RED namespace
apiVersion: v1
kind: Namespace
metadata:
  name: nodered
  labels:
    app: nodered
